--- a/src/app/html/projectDetail.html
+++ b/src/app/html/projectDetail.html
@@ -1,91 +1,4 @@
-      <style>
-  div.j {
-    background-color: lightgrey;
-    width: 50px;
-    border: 2px solid green;
-    padding: 2px;
-    margin: 2px;
-}
-h1 {
-    text-align: center;
-}
-     div.h {
-    float: center;
-  padding : 20px;
-      }
-      div.g {
-    float: right;
-      }
-    
-        div.d {
-          position: absolute;
-          left :0%;
-          width: 188px;
-          height: 300px;
-          border : 3px solid black;
-        }
-        div.a {
-            position: relative;
-            left : 187px;
-            width: 1000px;
-            height: 300px;
-            border: 3px solid black;
-            
-        }
-     /*   th.clicked:active{
-    background-color: yellow;
-
-        }*/
-      
-        body {
-            background-color: cyan;
-             }
-
-        table {
-             font-family: arial, sans-serif;
-              border-collapse: collapse;
-              width: 100%;
-              }
-
-          th {
-              border: 1px solid #dddddd;
-              text-align: left;
-              padding: 8px;
-               }  
-
-th.active:{
-  background-color: lightgrey;
-/*color: #fafafa;*/
-/*-webkit-transition: all 0.5s ease;
--moz-transition: all 0.5s ease;
--o-transition: all 0.5s ease;
-transition: all 0.5s ease;*/
-}
-
- .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 13px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 13px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-.button1 {background-color: #008CBA;} /* Blue */
-.button2 {   
-             background-color: #f44336;} /* Red */ 
-.button3 {background-color: #555555;} /* Black */
-
-
-
-        </style>
-
-
-   <div>
+<div>
      <div class ="g" >
 
       <button type="button" style="background-color:blue;" onclick="alert('Admin Page')" >Admin</button>
@@ -110,12 +23,12 @@ transition: all 0.5s ease;*/
     <ul>
         <li>
             <span (click)="changeShowStatus()" class="active"><i class="glyphicon glyphicon-folder-open">
-      </i> <b> ModuleName</b></span>
+      </i> <b> {{moduleName}}</b></span>
             <ul>
                 <li>
           <p> </p>
-                  <p><span class="glyphicon glyphicon-file"></span> Child </p>
-          <p><span class="glyphicon glyphicon-file"></span> Grand Child</p>
+                  <p><span class="glyphicon glyphicon-file"></span>{{moduleChild}} </p>
+         <!--  <p><span class="glyphicon glyphicon-file"></span> Grand Child</p> -->
                     
                         
                      
@@ -136,12 +49,14 @@ transition: all 0.5s ease;*/
           <th (click)="changeShowStatus()" class="active"> Test Planning</th>
 
         
-        <th>Test Execution</th>
-          <th>Report</th>
+        <th (click)="showTestExecution()" class="active">Test Execution</th>
+
+
+       <th>Report</th>
         </tr>
-        <tr *ngIf="show==true">
+        <tr >
       
-    <td  ><button (click)="goCreateModule()" class="button button1">CreateModule</button>
+    <td *ngIf="show==true" ><button (click)="goCreateModule()" class="button button1">CreateModule</button>
       <router-outlet></router-outlet>  
 <!-- <br>
 <br>
@@ -149,22 +64,27 @@ transition: all 0.5s ease;*/
      </td>
 
 
-    <td ><button (click)="goCreateFeature()" class="button button2" >CreateFeature</button>
+    <td *ngIf="show==true"><button (click)="goCreateFeature()" class="button button2" >CreateFeature</button>
 
  <router-outlet></router-outlet>  
 
     </td>
 
-     <td ><button (click)="goImport()" class="button button3">ImportScript</button>
+     <td *ngIf="show==true"><button (click)="goImport()" class="button button3">ImportScript</button>
 
      </td>
+     <td *ngIf="show==true"> <button style="background-color:green;">save </button></td>
+
+<td *ngIf="testExecution==true"><app-test></app-test>
+
+</td>
 </tr>
 
-  <tr>
-     <td> </td>
-     <td> </td>
-     <td>  <br><br> <br><br><br> <center><button style="background-color:green;">save </button></center></td>
-    </tr>
+  <!-- <tr> -->
+    <!--  <td> </td>
+     <td> </td> -->
+    <!--  <td>  <br><br> <br><br><br><button style="background-color:green;">save </button></td>
+    </tr> -->
       </table>
      
 </div>
