--- a/src/app/html/login.component.html
+++ b/src/app/html/login.component.html
@@ -1,9 +1,9 @@
 <div>
-<h1>UserName </h1> <input type="text" placeholder="Enter UserName" [(ngModel)]="userNameDetails" required>
-<br><br>
-<h1>Password</h1>  <input type="text" placeholder="Enter Password" [(ngModel)]="passwordDetails"  required>
-<br><br>
-<button (click)="checkLoginDetails()" ><h1>Login</h1></button>
-<button><h1>Cancel</h1></button>
-<router-outlet></router-outlet>
- </div>
+        <h1>UserName </h1> <input type="text" placeholder="Enter UserName" [(ngModel)]="userNameDetails" required>
+        <br><br>
+        <h1>Password</h1>  <input type="text" placeholder="Enter Password" [(ngModel)]="passwordDetails"  required>
+        <br><br>
+        <button class="button1" (click)="checkLoginDetails()"  ><h1>Login</h1></button>
+        <button class="button2" ><h1>Cancel</h1></button>
+        <router-outlet></router-outlet>
+</div>
